<resources>
    <string name="app_name">Grage Door Controller</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan_wifi">Scan WIFI</string>
    <string name="action_scan_QRcode">Scan QR code</string>
    <string name="button_available">Click to open the door</string>
    <string name="discription">Grage Door controller</string>
    <string name="cmd_in_progress">Sending command</string>
    <string name="prv_cmd_in_progress_give_up">Warning, the previous cmd not finished, please try again later</string>
    <string name="result_cmd_success">Cmd executed successfully</string>
    <string name="result_cmd_io_error">input output error </string>
    <string name="result_cmd_timeout">Time Out on connection</string>
    <string name="result_cmd_host_unavailable">Controller unreachable, please check if you have the right WIFI connected</string>
    <string name="result_cmd_host_refused">Connection refused by the controller</string>
    <string name="result_cmd_network_unreachable">Network not available</string>
    <string name="result_cmd_hostname_not_found">Controller name cannot be resolved</string>
    <string name="result_cmd_unknown">unknown error</string>
    <string name="enable_wifi_scan">enable_wifi_scan</string>
    <string name="wifi_scan_result">wifi_scan_result</string>
    <string name="wifi_scan_list">wifi_scan_result</string>
    <string name="on_connecting_controller">Connecting...</string>
    <string name="success_on_connecting_controller">Local controller connected</string>
    <string name="button_not_available">Unavailable</string>
    <string name="button_remote_control">Remote Control</string>
    <string name="current_wifi_ssid">Current WIFI: </string>
    <string name="no_wifi_connected">WIFI not connected</string>
    <string name="waiting_wifi_connected">Waiting controller</string>
    <string name="remote_door_control_status">Remote control status</string>
    <string name="remote_door_cmd_in_progress">Sending Remote command</string>
    <string name="remote_door_cmd_in_success">Waiting remote confirm</string>
    <string name="remote_door_button_ready">Remote button ready</string>
    <string name="remote_door_cmd_in_failure">Error on sending remote command</string>
    <string name="pref_client_ip_address_key">sensor_IP address_setting_key</string>
    <string name="pref_client_ip_port_key">sensor_IP_port_setting_key</string>
    <string name="pref_client_default_ip_address">192.168.12.240</string>
    <string name="pref_client_default_ip_port">5028</string>

    <string name="pref_client_ip_address_lable">Client IP Address</string>
    <string name="pref_client_ip_port_lable">Client IP Port</string>


    <string name="pref_enable_GCM_test_mode_lable">Test Mode</string>
    <string name="pref_enable_GCM_test_key" translatable="false">enable_GCM_test_mode_key</string>
    <string name="pref_enable_GCM_test_mode_true">Enabled</string>
    <string name="pref_enable_GCM_test_mode_false">Disabled</string>
    <string name="pref_enable_GCM_test_mode_default" translatable="false">false</string>

    <string name="pref_GCM_token_key">GCM token key</string>
    <string name="pref_GCM_token_empty_lable">GCM token empty</string>

    <string name="waring_gcm_token_empty">Google Instant id is empty, please scan it..</string>
    <string name="QRcode_scan_success">Scan QRcode Succesfully </string>
    <string name="Remote_image_flag">Remote Image </string>

</resources>
