<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorblack"

    android:gravity="center"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView android:text="@string/discription"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/wifi_status"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:textAppearanceLarge"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width= "260sp"
        android:layout_height="130sp"
        android:text="@string/button_not_available"

        android:id="@+id/toggleDoorButton"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="pressDoorButton" />

    <TextView android:text="@string/discription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cmd_status"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"

        android:textAppearance="?android:textAppearanceSmall"
        />
    <Button
        android:layout_width= "260sp"
        android:layout_height="130sp"
        android:text="@string/button_remote_control"

        android:id="@+id/gcmSending"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="pressRemoteButton" />

    <TextView android:text="@string/remote_door_control_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gcm_status"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"

        android:textAppearance="?android:textAppearanceSmall" />
</LinearLayout>
</LinearLayout>
